review_lab/apps/core/static/css/main.css
/* ... */
#right_rail div
{
    clear:both;
}

#right_rail ul li
{
    list-style:none;
    padding: 0 0 10px 0;
    margin:0 0 10px 0;
    border-bottom:3px solid white;
}

#right_rail ul li.last
{
    border-bottom:none;
}

#right_rail ul li h5
{
    font: 100 12px Arial;
    text-transform:none;
    margin-bottom:0;
}

#right_rail ul li p
{
    color:#000000;
}

#right_rail .more_link
{
    margin-bottom:15px;
}




/**
 *Index view / list
 **/ 


.review_list_container
{
    border-bottom:1px solid #DDDDDD;
    margin:10px 0 0 0;
    padding:10px 0 20px 0;
}

.review_list_container.last
{
    border:none;
    padding:10px 0 5px 0;
}

.review_list_container h2
{
    margin-bottom:2px;
}

.review_list_container h6
{
    font-weight:normal;
    color:#333333;
    margin-bottom:2px;
}

.byline_timestamp_container
{
    color:#000000;
    margin-bottom:8px;
}

.byline_timestamp_contaner span
{
    padding-left:5px;
}

/**
 *Main search box on search and index page
 **/

#main_search
{
    padding:18px 18px 5px 18px;
    float:left;
    clear:both;
    width:600px;
    margin:10px 0 18px 0;
    position:relative;
}

#main_search select
{
    font-family:Arial,'Liberation Sans',FreeSans,sans-serif;
    font-size:14px;
    text-transform:none;
    margin: 0 15px 0 15px;
    padding: 2px 2px 4px 2px;
    width:200px;
    float:left;
}

#main_search h1
{
    font-family:'LeagueGothicRegular', Arial,'Liberation Sans',FreeSans,sans-serif;
    font-size:36px;
    text-transform:uppercase;
    display:inline;
    margin:0 10px 0 0;
    float:left;
    line-height:.8;
}

#main_search span{
    float:left;
    margin:10px 15px 0 0;
}

#main_search_button{
    z-index:11;
    float:left;
    position:relative;
}

#main_q{
    z-index:10;
    padding:2px 0 2px 16px;
    width:170px;
    border:2px solid #DFDFDF;
    background:#FFFFFF;
    color:#000000;
    font:14px 'LeagueGothicRegular',Arial,'Liberation Sans',FreeSans,sans-serif;
    text-transform:uppercase;
    float:left;
    position:relative;
    margin:0 0 0 -10px;
}

#main_search h6
{
    text-transform:none;
    color:#666666;
    font-size:12px;
    margin:10px 0 0 0;
    clear:both;
}


/**
 *Detail Container, basically used on all details pages to wrap the main content.
 */

#detail_header h1
{
    font-family:Arial,'Liberation Sans',FreeSans,sans-serif;
    font-size:18px;
    font-weight:bold;
    text-transform:none;
}

#detail_header h6, #detail_header h4
{
    font-family:Arial,'Liberation Sans',FreeSans,sans-serif;
    font-size:14px;
}

#detail_header h4
{
    text-transform:none;
}

#review_header_details
{
    width:390px;
}



#detail_container p
{
    margin:0 0 18px 0;
}


.detail_item_container
{
    margin:18px 0 18px 0;
}

.detail_item
{
    margin: 0 0 22px 0;
    padding: 0 0 22px 0;
    border-bottom: 4px solid #D6E9E1;
    float:left;
    width:100%;
    clear:both;
}

.detail_item.last
{
    border-bottom:none;
}

.detail_item h2
{
    font-size:14px;    
}

.detail_item p
{
    color:#4D4D4D;
    display:inline;
}

.detail_item .more_link
{
    float:none;
    display:inline;
    font-size:12px;
}

.detail_item .verdict
{
    float:right;
    width:164px;
    margin:5px 15px 20px 20px;
    padding:15px;
}

.detail_item_metadata
{
    margin: 0 0 22px 0;
}

#tags, .bottom_box
{
    margin:18px 0 18px 0;
    padding:18px;
}

#tags
{
    font-weight:bold;
}

#ratings, #facets
{
    float:right;
    width:164px;
    padding:15px;
    margin:10px 15px 20px 20px;
}

#ratings h4, #facets h4
{
    font-family:Arial,'Liberation Sans',FreeSans,sans-serif;
    font-size:14px;
    margin:0 0 10px 0;
    text-transform:none;
}

#ratings img, .verdict img
{
    margin: 0 10px 0 0;
}

#ratings p, #facets p
{
    font-size:12px;
    color:#4D4D4D;
    margin: 8px 0 20px 0;
}

.rating_container a
{
    color: #778E1E;
}


#review_details, #review_header_details
{
    text-align:center;
    padding:18px 10px 18px 10px;
    margin:18px 0 18px 0;
}
#review_details h6, #review_details p, #review_header_details h6, #review_header_details p
{
    display:inline;
}

#review_details h6, #review_header_details h6
{
    font-weight:bold;
    text-transform:none;
}

#review_details p, #review_header_details p
{
    color:#4D4D4D;
}


/**
 *
 * Review Specific Details
 * 
 **/
.



/**
 *PAGINATION
 **/

.pagination
{
    float:left;
    clear:both;
    display:inline;
    margin:10px 0 10px 0;
    width:620px;
    text-align:right;
}

.pagination .page.current
{
    font-weight:bold;
    border:none;
}

.pagination .page
{
    padding:2px 5px 2px 5px;
    margin:0 2px 0 2px;
    border:1px solid #DDDDDD;
}

.pagination .prev, .pagination .next
{
    margin:0 5px 0 5px;
}






/**
 *Search
 **/

#search_results
{
    float:left;
    clear:both;
}

#search_results .detail_item_container
{
    float:none;
    clear:none;
}

#search_results .detail_item
{
    float:none;
    clear:none;
    overflow:hidden;
    width:auto;
}


#facets ul
{
    margin-left:20px;    
}

#facets ul li
{
    list-style:square;
    color:#778E1E;
}

#facets ul li a
{
    color:#000000;
}



































/* Generated by Font Squirrel (http://www.fontsquirrel.com) on December 13, 2011 */
/*
@font-face {
    font-family: 'LeagueGothicRegular';
    src: url('http://media.reporterslab.org/fonts/League_Gothic-webfont.eot');
    src: url('http://media.reporterslab.org/fonts/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
         url('http://media.reporterslab.org/fonts/League_Gothic-webfont.woff') format('woff'),
         url('http://media.reporterslab.org/fonts/League_Gothic-webfont.ttf') format('truetype'),
         url('http://media.reporterslab.org/fonts/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

*/
@font-face {
    font-family: 'LeagueGothicRegular';
    src: url('http://media.reporterslab.org/fonts/League_Gothic-webfont.eot');
}
/* ... */

